made cards and buttons

--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pet Adoption</title>
-    <link rel="stylesheet" href="main.css">
-</head>
-<body>
-    <script src="main.js"></script>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Pet Adoption</title>
+        <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="main.css" />
+	</head>
+	<body>
+		<div id="button-container">
+			<button id="all-button" class="filter-button">All</button>
+			<button id="dogs-button" class="filter-button">Dogs</button>
+			<button id="cats-button" class="filter-button">Cats</button>
+			<button id="dinos-button" class="filter-button">Dinos</button>
+		</div>
+
+		<div id="pet-container"></div>
+
+		<script src="main.js"></script>
+	</body>
 </html>
