--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<div id="button-container">
-			<button id="all-button" class="filter-button">All</button>
+			<button id="all-button" class="filter-button active">All</button>
 			<button id="dogs-button" class="filter-button">Dogs</button>
 			<button id="cats-button" class="filter-button">Cats</button>
 			<button id="dinos-button" class="filter-button">Dinos</button>
